scan terminee et PDF